[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmol-book"
version = "2.0.0-pre1"
description = "Style and Imports for dmol Book"
readme = "README.md"
authors = [
    {name = "Andrew D White", email = "andrew.white@rochester.edu"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["chemistry", "artificial intelligence", "molecules", "materials"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "jupyter-book==1.0.4",
    "matplotlib",
    "numpy",
    "ipython",
    "jax",
    "jaxlib",
    "pandas",
    "seaborn",
    "tabulate",
    "scikit-learn",
    "pydot",
    "pillow",
    "mordredcommunity[full]",
    "moviepy",
    "networkx",
    "MDAnalysis",
    "emlp",
    "selfies",
    "exmol",
    "rdkit",
    "sympy",
    "e3nn",
    "torch",  # if you want to change this, change the github action too
    "linkify-it-py",
]

[project.urls]
Homepage = "https://dmol.pub"
Repository = "https://github.com/whitead/dmol-book"
Documentation = "https://dmol.pub"

[tool.setuptools]
packages = ["dmol"]
